<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearEditProfileSc"
        style="@style/groupStylegray_50"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearColumnarrowleft"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAccount"
                style="@style/txtWorkSansromansemibold28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@string/lbl_account" />

            <FrameLayout
                android:id="@+id/frameUploadphoto"
                android:layout_width="@dimen/_170pxh"
                android:layout_height="@dimen/_185pxv"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_108pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginEnd="@dimen/_108pxh">

                <View
                    android:id="@+id/viewUploadeclipse"
                    android:layout_width="@dimen/_160pxh"
                    android:layout_height="@dimen/_151pxh"
                    android:layout_gravity="start"
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_77_42" />

                <LinearLayout
                    android:id="@+id/linearColumnuploadphotoic"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageUploadphotoic"
                        android:layout_width="@dimen/_46pxh"
                        android:layout_height="@dimen/_42pxh"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_uploadphotoic"

                         />

                    <TextView
                        android:id="@+id/txtUploadyourpho"
                        style="@style/txtWorkSansromanregular16"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:lineSpacingExtra="@dimen/_2pxh"
                        android:textSize="@dimen/_12pxh"
                        android:text="@string/msg_upload_your_ph" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearName"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNAME"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_weight="0"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_name" />

                <TextView
                    android:id="@+id/txtSongYuQi"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_165pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_song_yu_qi" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearEmail"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEMAIL"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.23"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_email" />

                <TextView
                    android:id="@+id/txtEmailOne"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_91pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.77"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_yukii_gmail_com" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/linearPassword"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPASSWORD"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_password" />

                <TextView
                    android:id="@+id/txtFour"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="126dp"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_toEndOf="@id/txtPASSWORD"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl2" />
            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300pxh"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20pxh">
            <TextView
                android:id="@+id/txtPersonalData"
                style="@style/txtWorkSansromanmedium18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_personal_data" />

            <LinearLayout
                android:id="@+id/linearGender"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtGENDER"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.49"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_gender" />

                <TextView
                    android:id="@+id/txtGenderOne"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_170pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.51"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_female" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearDob"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDATEOFBIRTH"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_date_of_birth" />

                <TextView
                    android:id="@+id/txtJun101996"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_46pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_jun_10_1996" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearHeight"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtHEIGHT"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.46"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_height" />

                <TextView
                    android:id="@+id/txtDistance"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_186pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_weight="0.54"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_150_cm" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearWeight"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtWEIGHT"
                    style="@style/txtWorkSansromanregular18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.55"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_weight" />

                <TextView
                    android:id="@+id/txtWeightOne"
                    style="@style/txtWorkSansromanmedium22"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_200pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginEnd="@dimen/_29pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_weight="0.45"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_40_kg" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
